# comprakt

./: .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  Cargo.toml  Jenkins.Dockerfile  Jenkinsfile  LICENSE-MIT  README.md  abstract_syntax.md  aliases.js  big_struct_gen.py  build  gen_test_script.py  grammar.md  grammer.md  helloworld.mj  index.html  run  search-index.js  source-files.js
backend_planb/: Cargo.toml
backend_planb/src/: alloc.rs  asm.rs  graph.rs  lib.rs  peephole.rs  regalloc.rs
compiler-cli/: Cargo.toml
compiler-cli/.tmpIR/: README.md
compiler-cli/integration-tests/: .gitignore
compiler-cli/src/: example.rs  lib.rs  main.rs  optimization_arg.rs  optimization_list.rs
compiler-cli/tests/: integration.rs
compiler-lib/: Cargo.toml
compiler-lib/benches/: symtab_bench.rs
compiler-lib/src/: ast.rs  backend.rs  context.rs  debugging.rs  diagnostics.rs  dot.rs  driver.rs  firm.rs  firm_context.rs  lexer.rs  lib.rs  method_body_typechecker.rs  multipeekable.rs  parser.rs  ref_eq.rs  sem.rs  semantics.rs  semantics2.rs  spantracker.rs  strtab.rs  symtab.rs  timing.rs  type_system.rs  utils.rs  visitor.rs
compiler-shared/: Cargo.toml
compiler-shared/src/: context.rs  lib.rs  timing.rs
debugging/: BreakpointFilters.t.html  Cargo.toml  DebuggerState.t.html  MsgToCompiler.t.html  all.html  breakpoint_filter_label.v.html  constant._IMPL_SERIALIZE_FOR_Breakpoint.html  constant._IMPL_SERIALIZE_FOR_CompiliationState.html  enum.Filter.html  enum.MsgToCompiler.html  enum.MsgToGui.html  fn.add_filter.html  fn.breakpoint_continue.html  fn.breakpoint_filter_label.html  fn.breakpoint_filter_location.html  fn.breakpoint_filter_name.html  fn.breakpoint_list.html  fn.check_updates.html  fn.http_server.html  fn.pause.html  fn.rocket_route_fn_breakpoint_continue.html  fn.rocket_route_fn_breakpoint_filter_label.html  fn.rocket_route_fn_breakpoint_filter_location.html  fn.rocket_route_fn_breakpoint_filter_name.html  fn.rocket_route_fn_breakpoint_list.html  fn.rocket_route_fn_snapshot_at_index.html  fn.snapshot_at_index.html  index.html  macro.breakpoint!.html  macro.breakpoint.html  macro.rocket_uri_macro_breakpoint_continue.html  macro.rocket_uri_macro_breakpoint_filter_label.html  macro.rocket_uri_macro_breakpoint_filter_location.html  macro.rocket_uri_macro_breakpoint_filter_name.html  macro.rocket_uri_macro_breakpoint_list!.html  macro.rocket_uri_macro_breakpoint_list.html  macro.rocket_uri_macro_snapshot_at_index!.html  macro.rocket_uri_macro_snapshot_at_index.html  rocket_route_fn_breakpoint_continue.v.html  rocket_route_fn_breakpoint_filter_label.v.html  (+20 more)
debugging/dot/: GraphData.t.html  GraphState.t.html  LabelMaker.t.html  Named.t.html  X11ColorIter.t.html  dot_string.v.html  enum.Color.html  enum.Shape.html  enum.Style.html  enum.X11Color.html  fn.default_label.html  fn.dom_info_box.html  fn.dot_string.html  fn.escape_record_content.html  index.html  sidebar-items.js  struct.GraphState.html  struct.Label.html  struct.NamedDot.html  struct.X11ColorIter.html  trait.Dot.html  trait.GraphData.html  trait.LabelMaker.html  trait.Named.html
debugging/src/: lib.rs
diagnostics/: Cargo.toml  all.html  enum.MessageLevel.html  fn.pad_left.html  fn.pad_left_with_char.html  fn.u8_to_printable_representation.html  index.html  lint_array.m.html  macro.declare_lint!.html  macro.declare_lint.html  macro.lint_array.html  pad_left.v.html  pad_left_with_char.v.html  sidebar-items.js  struct.Diagnostics.html  struct.Message.html  trait.Printable.html  u8_to_printable_representation.v.html
diagnostics/lint/: Lint.t.html  LintArray.t.html  LintId.t.html  index.html  sidebar-items.js  struct.Lint.html  struct.LintId.html  type.LintArray.html
diagnostics/src/: diagnostics.rs  lint.rs
firm-construction/: Cargo.toml
firm-construction/src/: firm_program.rs  lib.rs  method_body_generator.rs  program_generator.rs  runtime.rs  safety.rs  type_translation.rs
lexer/: Cargo.toml  Keyword.t.html  Token.t.html  all.html  enum.ErrorKind.html  enum.Keyword.html  enum.Operator.html  enum.TokenKind.html  enum.Warning.html  index.html  sidebar-items.js  struct.Lexer.html  type.IntLit.html  type.LexicalError.html  type.Token.html  type.TokenResult.html
lexer/lextest/: index.html  struct.Output.html
lexer/src/: lexer.rs  lextest.rs
libfirm-rs/: Cargo.toml  README.md
libfirm-rs/generator/: data.json  gen.ts  package.json  tsconfig.json
libfirm-rs/generator-rs/: Cargo.toml
libfirm-rs/src/: entity.rs  graph.rs  lib.rs  mode.rs  nodes.rs  nodes_gen.rs  other.rs  tarval.rs  types.rs  value_nodes.rs
lowering/: Cargo.toml  all.html  fn.run_backend.html  index.html  macro.derive_ptr_debug!.html  macro.derive_ptr_debug.html  run_backend.v.html  sidebar-items.js
lowering/amd64/: CallingConv.t.html  index.html  (+4 more)
mjrt/: Cargo.toml  LINKER_FLAGS.v.html  LINKER_LIBS.v.html  STATIC_LIB.v.html  all.html  build.rs  constant.LINKER_FLAGS.html  constant.LINKER_LIBS.html  constant.STATIC_LIB.html  index.html  lib.rs  sidebar-items.js
mjrt-impl/: Cargo.toml
mjrt-src/: Cargo.toml  build.rs
mjtest/: Cargo.toml  QuotingWormhole.t.html  SemanticTestCase.t.html  SyntaxAndSemanticFilePath.t.html  SyntaxTestCase.t.html  all.html  enum.SemanticTestCase.html  enum.SyntaxAndSemanticFilePath.html  enum.SyntaxTestCase.html  index.html  sidebar-items.js  trait.QuotingWormhole.html
optimization/: Cargo.toml  CommonSubExpr.t.html  Interprocedural.t.html  Local.t.html  Outcome.t.html  OutcomeCollector.t.html  RemoveCriticalEdges.t.html  all.html  enum.Flag.html  enum.Kind.html  enum.Level.html  enum.Outcome.html  index.html  sidebar-items.js  struct.CommonSubExpr.html  struct.NodeLocal.html  struct.Optimization.html  struct.OutcomeCollector.html  struct.RemoveCriticalEdges.html  trait.Interprocedural.html  trait.Local.html
parser/: Cargo.toml  all.html  enum.SyntaxError.html  gen_nodekind_match.m.html  index.html  macro.gen_nodekind_match.html  sidebar-items.js  struct.Parser.html
runner-integration-tests/: Cargo.toml  README.md
type_checking/: Cargo.toml  all.html  index.html  sidebar-items.js
(+19355 files in other folders)
