[workspace]
members = [
    "asciifile",
    "compiler-lib",
    "compiler-cli",
    "compiler-shared",
    "diagnostics",
    "inspect-ast",
    "lexer",
    "libfirm-rs-bindings",
    "libfirm-rs",
    "mjrt",
    "parser",
    "symtab",
    "type_checking",
    "utils",
    "runner-integration-tests",
    "codegen-integration-tests"
]
exclude = [
    "mjrt-impl",
]
