cargo-features = ["default-run"]

[package]
name = "compiler-cli"
version = "0.0.1"
authors = [
    "flip1995 <>",
    "hediet <>",
    "joshuabach <>",
    "problame <>",
    "reiner-dolp <>"
]

edition = "2018"
license = "MIT OR Apache-2.0"

default-run = "compiler-cli"

[dependencies]
structopt = "0.2"
failure = "0.1.3"
memmap = "0.7.0"
libc = "*"
termcolor = "1.0.4"
compiler-lib = { path = "../compiler-lib" }
inspect-ast = { path = "../inspect-ast" }
tempfile = "3.0"
mjrt = { path = "../mjrt" }

[dev-dependencies]
integration_test_codegen = { path = "integration-test-codegen" }
assert_cmd = "0.10"
predicates = "1.0"
difference = "2.0"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.2.0"
