cargo-features = ["default-run"]

[package]
name = "compiler-cli"
version = "0.0.1"
authors = [
    "flip1995 <>",
    "hediet <>",
    "joshuabach <>",
    "problame <>",
    "reiner-dolp <>"
]

edition = "2018"
license = "MIT OR Apache-2.0"

# NOTE: --features does not work with cargo run with this feature
#       see https://github.com/rust-lang/cargo/issues/5015
default-run = "compiler-cli"

[dependencies]
structopt = "0.2"
failure = "0.1.3"
memmap = "0.7.0"
libc = "*"
termcolor = "1.0.4"
compiler-lib = { path = "../compiler-lib" }
libfirm-rs = { path = "../libfirm-rs" }
inspect-ast = { path = "../inspect-ast" }
tempfile = "3.0"
mjrt = { path = "../mjrt" }
env_logger = "0.6"
log = "0.4"

[features]
# Enable all UB-safe-making features by default.
default = [ "checked_new" ]
checked_new = [ "mjrt/checked_new" ]
debugger_gui = [ "compiler-lib/debugger_gui" ]
debugger_vscode = [ "compiler-lib/debugger_vscode" ]
