cargo-features = ["default-run"]

[package]
name = "compiler-cli"
version = "0.0.1"
authors = [
    "flip1995 <>",
    "hediet <>",
    "joshuabach <>",
    "problame <>",
    "reiner-dolp <>"
]

edition = "2018"
license = "MIT OR Apache-2.0"

# NOTE: --features does not work with cargo run with this feature
#       see https://github.com/rust-lang/cargo/issues/5015
default-run = "compiler-cli"

[dependencies]
compiler-lib = { path = "../compiler-lib" }
compiler-shared= { path = "../compiler-shared" }
inspect-ast = { path = "../inspect-ast" }
libfirm-rs = { path = "../libfirm-rs" }
optimization = { path = "../optimization" }
mjrt = { path = "../mjrt" }
parser = { path = "../parser" }

structopt = "0.2"
failure = "0.1.3"
memmap = "0.7.0"
libc = "*"
termcolor = "1.0.4"
tempfile = "3.0"
env_logger = "0.6"
log = "0.4"
derive_more = "0.13"

[features]
# Enable all UB-safe-making features by default.
default = [ "checked_new" ]
checked_new = [ "mjrt/checked_new" ]
debugger_gui = [ "compiler-lib/debugger_gui" ]
