[package]
name = "compiler-lib"
version = "0.0.1"
authors = [
    "flip1995 <>",
    "hediet <>",
    "joshuabach <>",
    "problame <>",
    "reiner-dolp <>"
]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
diagnostics = { path = "../diagnostics" }
compiler-shared = { path = "../compiler-shared" }
asciifile = { path = "../asciifile" }
symtab = { path = "../symtab" }
strtab = { path = "../strtab" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
utils = { path = "../utils" }
type-checking = { path = "../type_checking" }
firm-construction = { path = "../firm-construction" }
debugging = { path = "../debugging" }
failure = "0.1.3"
termcolor = "1.0.4"
derive_more = "0.13"
strum = "0.11.0"
strum_macros = "0.11.0"
itertools = "0.7"
libfirm-rs = { path = "../libfirm-rs" }
# we need libc to open files for libfirm
libc = "0.2"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
priority-queue = "0.5.2"
petgraph = "0.4.13"

# for the gui debugger
rocket = "0.4.0"
rocket_contrib = "0.4.0"
lazy_static = "1.2.0"

[dev-dependencies]
mjtest = { path = "../mjtest-rs" }
mjtest_macros = { path = "../mjtest-rs/mjtest_macros" }
criterion = "0.2"

[[bench]]
name = "symtab_bench"
harness = false

[features]
default = [ ]

debugger_gui = [ "debugging/debugger_gui" ]
