[package]
name = "compiler-shared"
version = "0.1.0"
authors = [
    "flip1995 <>",
    "hediet <>",
    "joshuabach <>",
    "problame <>",
    "reiner-dolp <>"
]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
asciifile = { path = "../asciifile" }
diagnostics = { path = "../diagnostics" }

failure = "0.1.3"
termcolor = "1.0.4"
lazy_static = "1.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

