[package]
name = "debugging"
version = "0.1.0"
authors = [
    "flip1995 <>",
    "hediet <>",
    "joshuabach <>",
    "problame <>",
    "reiner-dolp <>"
]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
# This feature enables the `breakpoint!` macro, which
# among other things, is used to implement the `gui`
# flag in custom optimization sequences.
debugger_gui = [ ]

[dependencies]
libfirm-rs = { path = "../libfirm-rs" }
firm-construction = { path = "../firm-construction" }

petgraph = "0.4.13"

# for the gui debugger
rocket = "0.4.0"
rocket_contrib = "0.4.0"
lazy_static = "1.2.0"

log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

derive_more = "0.13"


