[package]
name = "lexer"
version = "0.1.0"
authors = [
    "flip1995 <>",
    "hediet <>",
    "joshuabach <>",
    "problame <>",
    "reiner-dolp <>"
]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lexer.rs"

[dependencies]
asciifile = { path = "../asciifile" }
compiler-shared = { path = "../compiler-shared" }
diagnostics = { path = "../diagnostics" }
strtab = { path = "../strtab" }
utils = { path = "../utils" }

derive_more = "0.13"
failure = "0.1.3"
