[package]
name = "mjrt-impl"
version = "0.1.0"
authors = ["Christian Schwarz <me@cschwarz.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
libc = "0.2"
backtrace = "0.2"

[features]
# Do not enable any performance-degrading features by default
# at this level. This is done by compiler-cli features.
default = [ ]

checked_new = []
