[package]
name = "mjtest"
version = "0.0.1"
authors = [
    "flip1995 <hello@philkrones.com>",
    "hediet <>",
    "joshuabach <>",
    "problame <>",
    "reiner-dolp <>"
]
# edition = "2018" https://users.rust-lang.org/t/how-to-use-proc-macro-on-rust-2018/20833/3
license = "MIT OR Apache-2.0"

[dependencies]
quote = "0.6"
proc-macro2 = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1"
