[package]
name = "optimization"
version = "0.1.0"
authors = [
    "flip1995 <>",
    "hediet <>",
    "joshuabach <>",
    "problame <>",
    "reiner-dolp <>"
]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
compiler-shared = { path = "../compiler-shared" }
debugging = { path = "../debugging" }
firm-construction = { path = "../firm-construction" }
libfirm-rs = { path = "../libfirm-rs" }
type-checking = { path = "../type_checking" }
utils = { path = "../utils" }

failure = "0.1.3"
log = "0.4"
derive_more = "0.13"
strum = "0.11.0"
strum_macros = "0.11.0"
intervallum = "1.3.0"
gcollections = "1.4.0"
itertools = "0.8"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

priority-queue = "0.5.2"
petgraph = "0.4.13"
lazy_static = "1.2.0"

[dev-dependencies]

