[package]
name = "runner-integration-tests"
version = "0.1.0"
authors = ["Reiner Dolp <reiner-dolp@users.noreply.github.com>"]
edition = "2018"

[dependencies]
integration_test_codegen = { path = "../codegen-integration-tests" }
difference = "2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.2.0"
wait-timeout = "0.1.5"
serde_yaml = "0.8"
structopt = "0.2"
failure = "0.1"
