[package]
name = "runner-integration-tests"
version = "0.1.0"
authors = ["Reiner Dolp <reiner-dolp@users.noreply.github.com>"]
edition = "2018"

[dependencies]
integration_test_codegen = { path = "../codegen-integration-tests" }
compiler-lib = { path = "../compiler-lib" }
compiler-cli = { path = "../compiler-cli" }
compiler-shared = { path = "../compiler-shared" }
optimization = { path = "../optimization" }

difference = "2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
lazy_static = "1.2.0"
wait-timeout = "0.1.5"
structopt = "0.2"
failure = "0.1"
regex = "1"
log = "0.4"
env_logger = "0.6"

# for benchmarking
streaming-stats = "0.2"
humantime = "1.2.0"
