[package]
name = "mjtest_macros"
version = "0.0.1"
authors = [
    "flip1995 <hello@philkrones.com>",
    "hediet <>",
    "joshuabach <>",
    "problame <>",
    "reiner-dolp <>"
]
# edition = "2018" https://users.rust-lang.org/t/how-to-use-proc-macro-on-rust-2018/20833/3
license = "MIT OR Apache-2.0"

[dependencies]
mjtest = { path = "../" }
quote = "0.6"
proc-macro2 = "0.4"
syn = { version = "0.15", features = [ "full" ] }

[lib]
proc-macro = true
